--- a/style.css
+++ b/style.css
@@ -817,8 +817,9 @@ h4 {
     background-image: url("img/lines-h2-bg.png");
 }
 
+/*changement */
 .bg-banniere {
-    background-image: url("img/agence-la-panthere.jpg");
+    background-image: url("img/agence-la-panthere.webp");
 }
 
 .bg-presentation {
