Ajustement du responsive tel que les images des résaux sociaux soit en ligne plutot qu'en colone, centrage de certaines images et ajustement de taille, diminution de la taille de certains texte et images.

--- a/style.css
+++ b/style.css
@@ -1042,6 +1042,27 @@ h4 {
     }
 }
 
-/* Responsive modification */
+/* Responsive et modification */
 
+.title {
+    font-size: 1.5em;
+    color:rgba(0, 0, 0, 0.6);
+}
 
+@media (max-width: 767px){
+    .tight-width-whitespace img{
+        width: 90px;
+    }
+    .title {
+        font-size: 1.2em;
+    }
+    .row-no-gutters{
+        display: flex;
+        justify-content: space-around;
+    }
+    .portfolio-row img{
+        margin-left: auto; 
+        margin-right: auto; 
+        width: 15em;
+    }
+}
