--- a/style.css
+++ b/style.css
@@ -1063,6 +1063,7 @@ h4 {
     .portfolio-row img{
         margin-left: auto; 
         margin-right: auto; 
-        width: 15em;
+        width: 100%;
+        height: auto;
     }
 }
