Modificationde l'index, ajout d'une augmentation da la taille des textes en responsive et ajout de nouvelle image compresser et converti en webp

--- a/style.css
+++ b/style.css
@@ -1050,6 +1050,9 @@ h4 {
 }
 
 @media (max-width: 767px){
+    p {
+        font-size: 14px;
+    }
     .tight-width-whitespace img{
         height: auto;
     }
